--- a/assignments/hybrid-layout/layout.html
+++ b/assignments/hybrid-layout/layout.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="layout.css">
     <link rel="stylesheet" href="../../styles/navbar.css">
+    <link rel="stylesheet" href="../../styles/footer.css">
 </head>
 <body>
     <div id="navbar-container"></div>
@@ -33,6 +34,14 @@
         </div>
     </div>
 
-    <div id="footer-placeholder"></div>>
+    <div id="footer-container"></div>
+    <script>
+        fetch('../../footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading navbar:', error));
+    </script>
 </body>
 </html>
