--- a/assignments/three-interests/music.html
+++ b/assignments/three-interests/music.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music</title>
     <link rel="stylesheet" href="../../styles/navbar.css">
+    <link rel="stylesheet" href="../../styles/footer.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -106,6 +107,14 @@
         </section>
     </main>
 
-    <div id="footer-placeholder"></div>
+    <div id="footer-container"></div>
+    <script>
+        fetch('../../footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading navbar:', error));
+    </script>
 </body>
 </html>
