--- a/group_assignments/GroupCSS1.html
+++ b/group_assignments/GroupCSS1.html
@@ -69,6 +69,7 @@
         <link rel="stylesheet" href="../styles/navbar.css">
         <title> Official JL</title>
         <link rel="stylesheet" href="../styles/navbar.css">
+        <link rel="stylesheet" href="../styles/footer.css">
     </head>
     <body>
         <div id="navbar-container"></div>
@@ -143,6 +144,14 @@
             </div>
         </div>
         
-        <div id="footer-placeholder"></div>
+        <div id="footer-container"></div>
+    <script>
+        fetch('../footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading navbar:', error));
+    </script>
     </body>
 </html>
