--- a/group_assignments/GroupCSS2.html
+++ b/group_assignments/GroupCSS2.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="GroupCSS2.css">
         <title>Kanye West Album Gallery</title>
         <link rel="stylesheet" href="../styles/navbar.css">
+        <link rel="stylesheet" href="../styles/footer.css">
     </head>
     <body>
         <div id="navbar-container"></div>
@@ -82,6 +83,14 @@
             </div>
         </section>
 
-        <div id="footer-placeholder"></div>
+        <div id="footer-container"></div>
+        <script>
+            fetch('../footer.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('footer-container').innerHTML = data;
+                })
+                .catch(error => console.error('Error loading navbar:', error));
+        </script>
     </body>
 </html>
