--- a/navbar.html
+++ b/navbar.html
@@ -8,10 +8,16 @@
             <a href="#"><i class="fa fa-paper-plane"></i> Group Assignments</a>
             <ul class="nav-dropdown">
                 <li class="nav-dropdown-item">
-                    <a href="/group_assignments/GroupCSS1.html">Group Assignment I</a>
+                    <a href="/group_assignments/ga1/GroupCSS1.html">Group Assignment I</a>
                 </li>
                 <li class="nav-dropdown-item">
-                    <a href="/group_assignments/GroupCSS2.html">Group Assignment II</a>
+                    <a href="/group_assignments/ga2/GroupCSS2.html">Group Assignment II</a>
+                </li>
+                <li class="nav-dropdown-item">
+                    <a href="/group_assignments/ga3/GroupAudio.html">Group Assignment III</a>
+                </li>
+                <li class="nav-dropdown-item">
+                    <a href="/group_assignments/ga4/GroupEvents.html">Group Assignment IV</a>
                 </li>
             </ul>
         </li>
