--- a/navbar.html
+++ b/navbar.html
@@ -56,6 +56,9 @@
                 <li class="nav-dropdown-item">
                     <a href="/assignments/sort-demo/sort.html">Sort-dEMO</a>
                 </li>
+                <li class="nav-dropdown-item">
+                    <a href="/assignments/card/card.html">Sort-dEMO</a>
+                </li>
             </ul>
         </li>
     </ul>
