--- a/assignments/card/card.html
+++ b/assignments/card/card.html
@@ -27,15 +27,15 @@
                 <h2>Information Form</h2>
                 <form class="business-card-form">
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="name"><br><br>
+                    <input type="text" id="name"><br><br>
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email"><br><br>
+                    <input type="email" id="email"><br><br>
                     <label for="address">Address:</label>
-                    <input type="text" id="address" name="address"><br><br>
+                    <input type="text" id="address"><br><br>
                     <label for="phone">Phone:</label>
-                    <input type="tel" id="phone" name="phone"><br><br>
+                    <input type="tel" id="phone"><br><br>
                     <label for="birthdate">Birthdate:</label>
-                    <input type="date" id="birthdate" name="birthdate"><br><br>
+                    <input type="date" id="birthdate"><br><br>
                     <input type="submit" value="Submit">
                 </form>
 
