--- a/group_assignments/ga3/GroupAudio.html
+++ b/group_assignments/ga3/GroupAudio.html
@@ -8,12 +8,15 @@
         <link rel="icon" href="img/jasnlogo.png" alt="logo" />
         <link rel="stylesheet" href="../../styles/footer.css">
         <link rel="stylesheet" href="../../styles/navbar.css">
+        <link rel="stylesheet" href="audio.css">
         <title> Official JL</title>
+        <link rel="icon" href="../../img/jasnlogo.png" alt="logo" />
+
     </head>
     <body>
         <div id="navbar-container"></div>
         <script>
-            fetch('navbar.html')
+            fetch('../../navbar.html')
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById('navbar-container').innerHTML = data;
@@ -24,7 +27,7 @@
         
         <div id="footer-container"></div>
         <script>
-            fetch('footer.html')
+            fetch('../../footer.html')
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById('footer-container').innerHTML = data;
